app/src/ui/components/Figure/Figure.css
.figure {
    img {
        @apply rounded-lg;
    }
}

.figure .zoom-btn {
    @apply cursor-zoom-in rounded-lg;

    &:focus {
        @apply outline-none;
    }

    &:focus-visible {
        @apply outline-solid outline-2 -outline-offset-4 outline-primary;
    }
}

.figure.is-zoomed img {
    visibility: hidden;
}

.zoomed-img {
    @apply flex-col items-center justify-center;
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    max-height: none;
    max-width: none;
    height: 100svh;
    width: 100svw;
    background-color: transparent;

    &[open] {
        @apply flex;

        &::backdrop {
            @apply bg-black/50! backdrop-blur;
            @apply animate-in fade-in duration-250;
        }

        &:has([data-is-closing])::backdrop {
            @apply animate-out fade-out duration-200;
        }
    }

    & > figure {
        @apply p-4 w-fit;
        position: relative;
        max-height: 100dvh;
        max-width: 100dvw;
        touch-action: none;

        &[data-is-dragging] figcaption {
            opacity: 0;
        }

        img {
            @apply rounded-lg;
            max-width: 100%;
            max-height: 100%;
        }

        figcaption {
            @apply absolute left-8 right-8 bottom-8 rounded-xl h-min max-h-1/3;
            @apply py-2 px-4;
            @apply bg-surface-level-1/50;
            backdrop-filter: blur(4px);
            transition: opacity 100ms;
            overflow: auto;
        }
    }

    &:has([data-is-closing]) .zoomed-img-close-btn {
        @apply animate-out fade-out duration-200;
    }
}

.zoomed-img-close-btn {
    @apply absolute flex items-center justify-center;
    @apply p-2 rounded-full text-xl cursor-pointer;
    @apply bg-surface-level-1/50 dark:bg-body-contrast/50;
    @apply hover:bg-surface-level-1 hover:text-primary;
    @apply dark:hover:bg-body-contrast dark:hover:text-primary-dark;
    backdrop-filter: blur(4px);
    top: max(calc(var(--spacing) * 4), env(safe-area-inset-top, 0));
    right: max(calc(var(--spacing) * 4), env(safe-area-inset-right, 0));
}

html:has(dialog.zoomed-img[open]) {
    overflow: hidden;
}

:root::view-transition-old(figure-zoomed) {
    display: none;
}

:root::view-transition-new(figure-zoomed) {
    animation: none;
    mix-blend-mode: normal;
}

